--- a/plot.ipynb
+++ b/plot.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "1660e572",
    "metadata": {},
    "outputs": [
@@ -635,10 +635,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476b8821",
+   "id": "537760e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cmd = '''\n",
+    "python -u abides.py -c rmsc03 -t ETH -d 20251028 -s 1235 -l rmsc03_two_hour --end-time 10:00:00\n",
+    "\n",
+    "python -u abides.py -c rmsc04 -t ETH -d 20251028 -s 1235 -l rmsc04_two_hour --end-time 10:00:00 -k 100000000 --fee 0.003\n",
+    "\n",
+    "python ttest.py\n",
+    "'''\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
