--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,6 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "39a7c70a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EventTime</th>\n",
+       "      <th>EventType</th>\n",
+       "      <th>Event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>AGENT_TYPE</td>\n",
+       "      <td>SnapshotAgent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>STARTING_CASH</td>\n",
+       "      <td>100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-11-14 00:00:00.000000000</td>\n",
+       "      <td>HOLDINGS_UPDATED</td>\n",
+       "      <td>{'CASH': 100000}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-11-14 09:30:01.009769548</td>\n",
+       "      <td>BID_DEPTH</td>\n",
+       "      <td>[(3731, 325), (3730, 77), (3729, 73), (3728, 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-11-14 09:30:01.009769548</td>\n",
+       "      <td>ASK_DEPTH</td>\n",
+       "      <td>[(3732, 1203), (3733, 33), (3736, 47), (3738, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5402</th>\n",
+       "      <td>2025-11-14 09:45:00.009769598</td>\n",
+       "      <td>VOLUME</td>\n",
+       "      <td>{'timestamp': 2025-11-14 09:45:00.009769598, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5403</th>\n",
+       "      <td>2025-11-14 09:45:00.009769598</td>\n",
+       "      <td>FINAL_HOLDINGS</td>\n",
+       "      <td>{ CASH: 100000 }</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5404</th>\n",
+       "      <td>2025-11-14 09:45:00.009769598</td>\n",
+       "      <td>FINAL_CASH_POSITION</td>\n",
+       "      <td>100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5405</th>\n",
+       "      <td>2025-11-14 09:45:00.009769598</td>\n",
+       "      <td>MARKED_TO_MARKET</td>\n",
+       "      <td>100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5406</th>\n",
+       "      <td>2025-11-14 09:45:00.009769598</td>\n",
+       "      <td>ENDING_CASH</td>\n",
+       "      <td>100000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5407 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         EventTime            EventType  \\\n",
+       "0                              NaT           AGENT_TYPE   \n",
+       "1                              NaT        STARTING_CASH   \n",
+       "2    2025-11-14 00:00:00.000000000     HOLDINGS_UPDATED   \n",
+       "3    2025-11-14 09:30:01.009769548            BID_DEPTH   \n",
+       "4    2025-11-14 09:30:01.009769548            ASK_DEPTH   \n",
+       "...                            ...                  ...   \n",
+       "5402 2025-11-14 09:45:00.009769598               VOLUME   \n",
+       "5403 2025-11-14 09:45:00.009769598       FINAL_HOLDINGS   \n",
+       "5404 2025-11-14 09:45:00.009769598  FINAL_CASH_POSITION   \n",
+       "5405 2025-11-14 09:45:00.009769598     MARKED_TO_MARKET   \n",
+       "5406 2025-11-14 09:45:00.009769598          ENDING_CASH   \n",
+       "\n",
+       "                                                  Event  \n",
+       "0                                         SnapshotAgent  \n",
+       "1                                                100000  \n",
+       "2                                      {'CASH': 100000}  \n",
+       "3     [(3731, 325), (3730, 77), (3729, 73), (3728, 1...  \n",
+       "4     [(3732, 1203), (3733, 33), (3736, 47), (3738, ...  \n",
+       "...                                                 ...  \n",
+       "5402  {'timestamp': 2025-11-14 09:45:00.009769598, '...  \n",
+       "5403                                   { CASH: 100000 }  \n",
+       "5404                                             100000  \n",
+       "5405                                             100000  \n",
+       "5406                                             100000  \n",
+       "\n",
+       "[5407 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "import numpy as np\n",
+    "\n",
+    "# 读取快照数据\n",
+    "df = pd.read_pickle(r'log\\rmsc03_two_hour\\SNAPSHOT_AGENT.bz2')\n",
+    "df = df.reset_index()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "fc927f73",
    "metadata": {},
