--- a/框架图解释.md
+++ b/框架图解释.md
@@ -1,3 +1,5 @@
+![image-20200801141651082](framework.png)
+
 当模拟开始时，**Kernel** Wakeup 所有Agent完成各自的初始化，TradingAgent每次被唤醒都会执行一套预设的行为逻辑：
 
 1. 首先是获取数据：
@@ -7,4 +9,3 @@
 3. TradingAgent的交易请求会被ExchangeAgent或者CFMMAgent收到并执行，同时更新订单簿Order book和货币池Currency pool里的信息。
 
 TradingAgent 每次被唤醒都会通过SetWakeup 设置下次被唤醒的时间。整个流程在Kernel的调度下，各组件通过消息队列和唤醒机制持续推进，完成每个时刻的市场交易、数据快照。直到Kernel判断当前时间大于mkt_close的时间，终止进程。
-
