--- a/plot.ipynb
+++ b/plot.ipynb
@@ -741,12 +741,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "252d9f3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel('实验结果.xlsx', index=False)"
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_csv('experiment_results.csv').to_excel('实验结果.xlsx', index=False)"
    ]
   },
   {
